# The-True-String

./: .zenodo.json  CITATION.cff  CMakeLists.txt  COPYRIGHT  LICENSE  LICENSE-CODE  LICENSE-DOCS  Makefile  README.md  RELEASE_NOTES.md  The True String  The-True-String.tex  latex  spectral_t.cpp  spectral_t_utils.py  sponge_T.py  start.py  thetruestring.eml
.github/workflows/: build.yml  latex-build.yml  python-checks.yml  release.yml
python/: plot_residues.py  requirements.txt  spectrum_analysis.py  test_parametric_odd_composites.py  true_string_collision.py  verify_T.py  verify_multiplicity.py  verify_unordered_multiplicity.py
src/: prime_spectrum.cpp
tex/: main.tex  references.bib  true_string_collision.tex  true_string_unordered.tex
